--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,1 +1,536 @@
-body{margin:0}figure{margin:0}img{vertical-align:top;width:100%}p{margin:0}a{text-decoration:none}button{background:#fff;border:none;padding:0;outline:none}select{border:none;outline:none;background:#fff}ul{margin:0;padding:0;list-style:none}input{outline:0}input[type="submit"]{border:none}*{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box}.logo{padding:.5rem 1rem;}.logo__small{max-width:2rem}.logo__normal{max-width:11rem;display:none}@media (min-width:300px){.logo__small{display:none}.logo__normal{display:block}}@media (min-width:450px){.logo__normal{max-width:13.5rem}}.skinny-text{color:#000;font-size:1rem;letter-spacing:.5px;font-family:'Roboto Condensed'}.skinny-text[data-color='light']{color:#aaa}.skinny-text[data-size='small']{font-size:.85rem}.medium-text{color:#585858;font-weight:600;font-size:.85rem;letter-spacing:1px;font-family:'Raleway';text-transform:uppercase}.separator-text{text-transform:uppercase;color:#aaa;font-family:'Oswald';font-size:.8em;letter-spacing:1.5px;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;}.separator-text .line{-webkit-box-flex:1;-moz-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;height:1px;background:#eee}.separator-text .text{padding:0 1em}.italic-text{color:#000;font-size:1rem;letter-spacing:1px;font-family:'Raleway';line-height:1.25;font-style:italic;}.italic-text a{display:inline-block;font-weight:bold}.italic-text[data-size='small']{font-size:.9rem}.italic-text[data-color='light']{color:#aaa}.section-title-text{font-family:'Oswald';font-size:1.5rem;color:#585858;letter-spacing:.5px}.navigation-text{font-family:'Oswald';color:#585858;font-family:'Raleway';font-weight:600;letter-spacing:1px}.high-text{color:#000;font-size:1rem;letter-spacing:1px;font-family:'Raleway';line-height:1.25;}.high-text a{font-weight:bold}.high-text[data-size='small']{font-size:.9rem}.high-text[data-color='light']{color:#aaa}.profile-text{font-family:'Oswald';font-size:1.5rem;color:#585858;letter-spacing:.5px;line-height:1em}.single-product-text{font-family:'Oswald';font-size:1.75rem;color:#585858;letter-spacing:1px;line-height:1em}.thick-menu-container{display:block;font-weight:600;letter-spacing:2px;font-family:'Raleway';text-transform:uppercase;white-space:nowrap;overflow:auto;}.thick-menu-container::-webkit-scrollbar{display:none}.thick-menu{display:table;margin:auto;}.thick-menu__item{color:#333;padding-top:.75rem;padding-bottom:.75rem;display:table-cell;cursor:pointer;}.thick-menu__item:not(:first-child){padding-left:1rem}.thick-menu__item:not(:last-child){padding-right:1rem}.thick-menu__item.selected{background:#f6f6f6;border-left:1px solid #eee;border-right:1px solid #eee}.skinny-menu{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;font-size:.8rem;letter-spacing:2px;font-family:'Raleway';text-transform:uppercase;}.skinny-menu__item{color:#333;padding:.5em 1rem;cursor:pointer;}.skinny-menu__item__icon{font-size:.9rem}.skinny-menu__item.active{border-bottom:.25em solid #000}.skinny-menu__avatar{padding:0 1rem;cursor:pointer}.skinny-menu[data-icon='true'] .skinny-menu__item__text{display:none}@media (min-width:590px){.skinny-menu[data-icon='true'] .skinny-menu__item__text{display:inline}.skinny-menu[data-icon='true'] .skinny-menu__item__icon{display:none}}.square-menu-container{height:3.5rem;overflow:hidden;max-width:1100px;margin:auto}.square-menu{letter-spacing:1.5px;font-family:'Oswald';color:#585858;font-size:.9rem;white-space:nowrap;overflow-x:auto;overflow-y:hidden;margin:0 1rem;}.square-menu__item{display:inline-block;border:solid 1px #ddd;padding:.5rem .75rem;margin:.5rem 0;background:#fff;cursor:pointer;position:relative;}.square-menu__item:not(:first-child){margin-left:.5rem}.square-menu__item:not(:last-child){margin-right:.5rem}.account-menu{position:absolute;bottom:0;right:1rem;-webkit-transform:translate(0,100%);-moz-transform:translate(0,100%);-o-transform:translate(0,100%);-ms-transform:translate(0,100%);transform:translate(0,100%);display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-orient:vertical;-moz-box-orient:vertical;-o-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;background:#fff;z-index:1;font-family:'Roboto Condensed';font-weight:300;font-size:.9rem;padding:.5rem;letter-spacing:1px;border:solid 1px #eee;}.account-menu__item{color:#333;padding:.5rem;}.account-menu__item:hover{color:#000}.account-menu__item b{font-weight:400}.header{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-pack:justify;-moz-box-pack:justify;-o-box-pack:justify;-ms-flex-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;max-width:1100px;margin:.5rem auto;position:relative}.category-menu{border-top:1px solid #eee;border-bottom:1px solid #eee;}.category-menu .carousel{margin:auto;height:2.5rem;padding:0 1rem;overflow:hidden;max-width:1100px}.flash-message-container{max-width:1100px;margin:auto;display:none}.flash-message{text-align:center;position:relative;margin:0 1rem;padding:1rem;}.flash-message.error{background:#fae7c8;color:#ce6637}.flash-message.success{background:#e8edd0;color:#48970c}.flash-message .text{font-family:Arial;font-size:.95rem;letter-spacing:1px}.flash-message .fa{position:absolute;top:0;right:0;cursor:pointer;padding:1rem}.footer-container{background:#181818;}.footer-container .footer{max-width:1100px;margin:auto;color:#fff;text-align:center;padding:1.5rem 0;}.footer-container .footer__logo{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;padding:1rem 0}.footer-container .footer__section{padding:.25rem 0;}.footer-container .footer__section.copyright{padding:0 1rem}.footer-container .footer__section.links{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;}.footer-container .footer__section.links p{padding:.5rem}.footer-container .footer__section.social .fa{padding:.5rem;margin:0 .5rem;font-size:1.15rem}@media (min-width:920px){.footer__sections{display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center}.footer__section{-webkit-box-flex:1;-moz-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1;}.footer__section.copyright{text-align:left}.footer__section.social{text-align:right}}html{height:100%;font-size:90%}@media (min-width:720px){html{font-size:100%}}body{height:100%}.main-wrapper{min-height:100%;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-orient:vertical;-moz-box-orient:vertical;-o-box-orient:vertical;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;}.main-wrapper__content{-webkit-box-flex:1;-moz-box-flex:1;-o-box-flex:1;box-flex:1;-webkit-flex:1;-ms-flex:1;flex:1}.main-wrapper__content.gray{background:#f6f6f6}
+/*------------------------------------*
+	$ BASE
+*------------------------------------*/
+body {
+  margin: 0;
+}
+figure {
+  margin: 0;
+}
+img {
+  vertical-align: top;
+  width: 100%;
+}
+p {
+  margin: 0;
+}
+a {
+  text-decoration: none;
+}
+button {
+  background: #fff;
+  border: none;
+  padding: 0;
+  outline: none;
+}
+select {
+  border: none;
+  outline: none;
+  background: #fff;
+}
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+input {
+  outline: 0;
+}
+input[type="submit"] {
+  border: none;
+}
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.logo {
+  padding: 0.5rem 1rem;
+}
+.logo__small {
+  max-width: 2rem;
+}
+.logo__normal {
+  max-width: 11rem;
+  display: none;
+}
+@media (min-width: 300px) {
+  .logo__small {
+    display: none;
+  }
+  .logo__normal {
+    display: block;
+  }
+}
+@media (min-width: 450px) {
+  .logo__normal {
+    max-width: 13.5rem;
+  }
+}
+.skinny-text {
+  color: #000;
+  font-size: 1rem;
+  letter-spacing: 0.5px;
+  font-family: 'Roboto Condensed';
+}
+.skinny-text[data-color='light'] {
+  color: #aaa;
+}
+.skinny-text[data-size='small'] {
+  font-size: 0.85rem;
+}
+.medium-text {
+  color: #585858;
+  font-weight: 600;
+  font-size: 0.85rem;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  text-transform: uppercase;
+}
+.separator-text {
+  text-transform: uppercase;
+  color: #aaa;
+  font-family: 'Oswald';
+  font-size: 0.8em;
+  letter-spacing: 1.5px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.separator-text .line {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  height: 1px;
+  background: #eee;
+}
+.separator-text .text {
+  padding: 0 1em;
+}
+.italic-text {
+  color: #000;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  line-height: 1.25;
+  font-style: italic;
+}
+.italic-text a {
+  display: inline-block;
+  font-weight: bold;
+}
+.italic-text[data-size='small'] {
+  font-size: 0.9rem;
+}
+.italic-text[data-color='light'] {
+  color: #aaa;
+}
+.section-title-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+}
+.navigation-text {
+  font-family: 'Oswald';
+  color: #585858;
+  font-family: 'Raleway';
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.high-text {
+  color: #000;
+  font-size: 1rem;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  line-height: 1.25;
+}
+.high-text a {
+  font-weight: bold;
+}
+.high-text[data-size='small'] {
+  font-size: 0.9rem;
+}
+.high-text[data-color='light'] {
+  color: #aaa;
+}
+.profile-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+  line-height: 1em;
+}
+.single-product-text {
+  font-family: 'Oswald';
+  font-size: 1.75rem;
+  color: #585858;
+  letter-spacing: 1px;
+  line-height: 1em;
+}
+.thick-menu-container {
+  display: block;
+  font-weight: 600;
+  letter-spacing: 2px;
+  font-family: 'Raleway';
+  text-transform: uppercase;
+  white-space: nowrap;
+  overflow: auto;
+}
+.thick-menu-container::-webkit-scrollbar {
+  display: none;
+}
+.thick-menu {
+  display: table;
+  margin: auto;
+}
+.thick-menu__item {
+  color: #333;
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  display: table-cell;
+  cursor: pointer;
+}
+.thick-menu__item:not(:first-child) {
+  padding-left: 1rem;
+}
+.thick-menu__item:not(:last-child) {
+  padding-right: 1rem;
+}
+.thick-menu__item.selected {
+  background: #f6f6f6;
+  border-left: 1px solid #eee;
+  border-right: 1px solid #eee;
+}
+.skinny-menu {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  font-size: 0.8rem;
+  letter-spacing: 2px;
+  font-family: 'Raleway';
+  text-transform: uppercase;
+}
+.skinny-menu__item {
+  color: #333;
+  padding: 0.5em 1rem;
+  cursor: pointer;
+}
+.skinny-menu__item__icon {
+  font-size: 0.9rem;
+}
+.skinny-menu__item.active {
+  border-bottom: 0.25em solid #000;
+}
+.skinny-menu__avatar {
+  padding: 0 1rem;
+  cursor: pointer;
+}
+.skinny-menu[data-icon='true'] .skinny-menu__item__text {
+  display: none;
+}
+@media (min-width: 590px) {
+  .skinny-menu[data-icon='true'] .skinny-menu__item__text {
+    display: inline;
+  }
+  .skinny-menu[data-icon='true'] .skinny-menu__item__icon {
+    display: none;
+  }
+}
+.square-menu-container {
+  height: 3.5rem;
+  overflow: hidden;
+  max-width: 1100px;
+  margin: auto;
+}
+.square-menu {
+  letter-spacing: 1.5px;
+  font-family: 'Oswald';
+  color: #585858;
+  font-size: 0.9rem;
+  white-space: nowrap;
+  overflow-x: auto;
+  overflow-y: hidden;
+  margin: 0 1rem;
+}
+.square-menu__item {
+  display: inline-block;
+  border: solid 1px #ddd;
+  padding: 0.5rem 0.75rem;
+  margin: 0.5rem 0;
+  background: #fff;
+  cursor: pointer;
+  position: relative;
+}
+.square-menu__item:not(:first-child) {
+  margin-left: 0.5rem;
+}
+.square-menu__item:not(:last-child) {
+  margin-right: 0.5rem;
+}
+.account-menu {
+  position: absolute;
+  bottom: 0;
+  right: 1rem;
+  -webkit-transform: translate(0, 100%);
+  -moz-transform: translate(0, 100%);
+  -o-transform: translate(0, 100%);
+  -ms-transform: translate(0, 100%);
+  transform: translate(0, 100%);
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  background: #fff;
+  z-index: 1;
+  font-family: 'Roboto Condensed';
+  font-weight: 300;
+  font-size: 0.9rem;
+  padding: 0.5rem;
+  letter-spacing: 1px;
+  border: solid 1px #eee;
+}
+.account-menu__item {
+  color: #333;
+  padding: 0.5rem;
+}
+.account-menu__item:hover {
+  color: #000;
+}
+.account-menu__item b {
+  font-weight: 400;
+}
+.header {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  max-width: 1100px;
+  margin: 0.5rem auto;
+  position: relative;
+}
+.category-menu {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.category-menu .carousel {
+  margin: auto;
+  height: 2.5rem;
+  padding: 0 1rem;
+  overflow: hidden;
+  max-width: 1100px;
+}
+.flash-message-container {
+  max-width: 1100px;
+  margin: auto;
+  display: none;
+}
+.flash-message {
+  text-align: center;
+  position: relative;
+  margin: 0 1rem;
+  padding: 1rem;
+}
+.flash-message.error {
+  background: #fae7c8;
+  color: #ce6637;
+}
+.flash-message.success {
+  background: #e8edd0;
+  color: #48970c;
+}
+.flash-message .text {
+  font-family: Arial;
+  font-size: 0.95rem;
+  letter-spacing: 1px;
+}
+.flash-message .fa {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  padding: 1rem;
+}
+.footer-container {
+  background: #181818;
+}
+.footer-container .footer {
+  max-width: 1100px;
+  margin: auto;
+  color: #fff;
+  text-align: center;
+  padding: 1.5rem 0;
+}
+.footer-container .footer__logo {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 1rem 0;
+}
+.footer-container .footer__section {
+  padding: 0.25rem 0;
+}
+.footer-container .footer__section.copyright {
+  padding: 0 1rem;
+}
+.footer-container .footer__section.links {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.footer-container .footer__section.links p {
+  padding: 0.5rem;
+}
+.footer-container .footer__section.social .fa {
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  font-size: 1.15rem;
+}
+@media (min-width: 920px) {
+  .footer__sections {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .footer__section {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+  .footer__section.copyright {
+    text-align: left;
+  }
+  .footer__section.social {
+    text-align: right;
+  }
+}
+html {
+  font-size: 16px;
+  height: 100%;
+  font-size: 90%;
+}
+@media (min-width: 720px) {
+  html {
+    font-size: 100%;
+  }
+}
+body {
+  height: 100%;
+  position: relative;
+}
+.main-wrapper {
+  min-height: 100%;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -moz-box-orient: vertical;
+  -o-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+.main-wrapper__content {
+  -webkit-box-flex: 1;
+  -moz-box-flex: 1;
+  -o-box-flex: 1;
+  box-flex: 1;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+.main-wrapper__content.gray {
+  background: #f6f6f6;
+}
+.modal {
+  background: rgba(0,0,0,0.25);
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
+}
+.modal-box {
+  max-width: 400px;
+  background: #fff;
+  margin: 2rem auto;
+}
