--- a/app/views/user/account/addresses.html
+++ b/app/views/user/account/addresses.html
@@ -4,23 +4,112 @@
 {% set title = 'Arte Manifiesto | Addresses' %}
 {% set css = 'account' %}
 
+{% block stylesheets %}
+
+	<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"> -->
+	<!-- <link rel="stylesheet" type="text/css" href="/css/account.css"> -->
+
+{% endblock %}
+
 {% block elements %}
 
     {% include '../../partials/account.html' %}
 
 {% endblock %}
 
+{% block modal %}
+	
+	<div class="modal">
+		<div class="modal-box">
+
+			<form class="shipping-form" action="">
+				<div class="title">Editar esta direccion</div>
+				<div class="input-container">
+				    <label>Ciudad</label>
+				    <select class="input" name="gender">
+				        <option disabled selected>Holi</option>
+				        <option value="Male">Boli</option>
+				        <option value="Female">Crayoli</option>
+				    </select>
+				</div>
+				<div class="input-container">
+				    <label>Nombre</label>
+				    <input class="input" type="text" placeholder=""/>
+				</div>
+				<div class="input-container">
+				    <label>Direccion</label>
+				    <input class="input" type="text" placeholder=""/>
+				</div>
+				<div class="input-container">
+				    <label>Ciudad</label>
+				    <input class="input" type="text" placeholder=""/>
+				</div>
+				<div class="input-container">
+				    <label>Estado</label>
+				    <input class="input" type="text" placeholder=""/>
+				</div>
+				<div class="input-container">
+				    <label>Codigo Postal</label>
+				    <input class="input" type="text" placeholder=""/>
+				</div>
+				<div class="input-container">
+				    <label>Telefono</label>
+				    <input class="input" type="text" placeholder=""/>
+				</div>
+				<input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
+			</form>
+
+		</div>
+	</div>
+
+	<!-- <form class="shipping-container" action="">
+	    <div class="input-container">
+	        <label>City</label>
+	        <select class="input" name="gender">
+	            <option disabled selected>Country</option>
+	            <option value="Male">Masculino</option>
+	            <option value="Female">Femenino</option>
+	        </select>
+	    </div>
+	    <div class="input-container">
+	        <label>Name</label>
+	        <input class="input" type="text" placeholder=""/>
+	    </div>
+	    <div class="input-container">
+	        <label>Address</label>
+	        <input class="input" type="text" placeholder=""/>
+	    </div>
+	    <div class="input-container">
+	        <label>City</label>
+	        <input class="input" type="text" placeholder=""/>
+	    </div>
+	    <div class="input-container">
+	        <label>State</label>
+	        <input class="input" type="text" placeholder=""/>
+	    </div>
+	    <div class="input-container">
+	        <label>Zip code</label>
+	        <input class="input" type="text" placeholder=""/>
+	    </div>
+	    <input class="button-solid" data-size='' data-color='red' data-expand='' value="Guardar Cambios" type="submit">
+	</form> -->
+
+{% endblock %}
+
 {% block scripts %}
 
-<script type="text/javascript">
-    // var successMessage = {{ successMessage|json|safe }}
-    // console.log('successMessage: ', successMessage)
+	<!-- // <script type="text/javascript" src="/js/vendor/jquery.min.js"></script> -->
+	<!-- // <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
 
-    // var errorMessage = {{ errorMessage|json|safe }}
-    // console.log('errorMessage: ', errorMessage)
-    
-    var user = {{ user|json|safe }}
-    console.log('user: ', user)
-</script>
+	<script type="text/javascript">
+	    // var successMessage = {{ successMessage|json|safe }}
+	    // console.log('successMessage: ', successMessage)
+
+	    // var errorMessage = {{ errorMessage|json|safe }}
+	    // console.log('errorMessage: ', errorMessage)
+	    
+	    var user = {{ user|json|safe }}
+	    console.log('user: ', user)
+	</script>
 
 {% endblock %}
