--- a/public/src/stylus/base.styl
+++ b/public/src/stylus/base.styl
@@ -14,7 +14,9 @@
 @import 'objects/flash-message.styl'
 @import 'objects/footer.styl'
 
+
 html
+	font-size 16px
 	height 100%
 	font-size 90%
 
@@ -23,7 +25,9 @@ html
 		font-size 100%
 		
 body
+	// min-height 100%
 	height 100%
+	position relative
 
 .main-wrapper
 	min-height 100%
@@ -33,3 +37,17 @@ body
 		flex 1
 	&__content.gray
 		background #f6f6f6
+		
+.modal
+	background rgba(black, .25)
+	position absolute
+	top 0
+	bottom 0
+	left 0
+	right 0
+	overflow: auto;
+	&-box
+		// margin auto
+		max-width 400px
+		background white
+		margin 2rem auto
