--- a/public/src/stylus/elements/inputs.styl
+++ b/public/src/stylus/elements/inputs.styl
@@ -71,7 +71,6 @@
 	box-shadow 0 1px 2px 1px rgba(0,0,0,0.1)
 	border 1px solid #d8dae4
 	background white
-  
 	.input-container
 		display flex
 		align-items center
@@ -84,7 +83,7 @@
 			letter-spacing 1px
 			font-family 'Raleway'
 			text-transform uppercase
-			min-width 10rem
+			min-width 9rem
 		.avatars
 			display flex
 			width 100%
@@ -101,35 +100,83 @@
 		margin 1.5rem auto
 		display table
 
-
-.shippinges-container
+.shipping-form
 	border solid 1px #ddd
 	box-shadow rgba(0,0,0,0.35) 0 0 10px
-.shippinges
+	padding 1rem
 	display flex
-	flex-wrap wrap
-	.shipping
-		flex 1
-		max-width 50%
+	flex-direction column
+	font-family: 'Oswald';
+	letter-spacing: 0.75px;
+	color: #585858;
+	.title
+		font-size: 1.15rem;
+		padding: .5rem;
+	.input-container
 		padding .5rem
-		&-inner
-			padding 1rem
-			background #e9f3f5
-			font-family 'Roboto Condensed'
-			box-shadow 1px 1px 0 #e7e7e7
-			letter-spacing .5px
-		&-title
-			font-size 1.15rem
-			padding-bottom .5rem
-		&-subtitle
-			font-weight 300
-			font-size .95rem
-		&-buttons
-			display flex
-			justify-content flex-end
-			button
-				&:not(:first-child)
-					background blue
-					margin-left .5rem
-
-// &:not(:first-child)
+		label
+			margin-bottom: .25rem;
+			display: block;
+			font-size: .9rem;
+		.input
+			font-size: .85rem;
+	.button-solid
+		margin: 1rem 0.5rem;
+		font-size: .9rem;
+		// label
+			// font-family 'Roboto Condensed'
+	// flex-wrap wrap
+	// .shipping
+	// 	flex 1
+	// 	max-width 50%
+	// 	padding .5rem
+	// 	&-inner
+	// 		padding 1rem
+	// 		background #e9f3f5
+	// 		font-family 'Roboto Condensed'
+	// 		box-shadow 1px 1px 0 #e7e7e7
+	// 		letter-spacing .5px
+	// 	&-title
+	// 		font-size 1.15rem
+	// 		padding-bottom .5rem
+	// 	&-subtitle
+	// 		font-weight 300
+	// 		font-size .95rem
+	// 	&-buttons
+	// 		display flex
+	// 		justify-content flex-end
+	// 		button
+	// 			&:not(:first-child)
+	// 				background blue
+	// 				margin-left .5rem
+					
+// .shipping-container
+// 	border solid 1px #ddd
+// 	box-shadow rgba(0,0,0,0.35) 0 0 10px
+// 	padding 1rem
+// .shippinges
+// 	display flex
+// 	flex-wrap wrap
+// 	.shipping
+// 		flex 1
+// 		max-width 50%
+// 		padding .5rem
+// 		&-inner
+// 			padding 1rem
+// 			background #e9f3f5
+// 			font-family 'Roboto Condensed'
+// 			box-shadow 1px 1px 0 #e7e7e7
+// 			letter-spacing .5px
+// 		&-title
+// 			font-size 1.15rem
+// 			padding-bottom .5rem
+// 		&-subtitle
+// 			font-weight 300
+// 			font-size .95rem
+// 		&-buttons
+// 			display flex
+// 			justify-content flex-end
+// 			button
+// 				&:not(:first-child)
+// 					background blue
+// 					margin-left .5rem
