--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-  <meta charset="UTF-8">
-  <title>Work</title>
+    <meta charset="UTF-8">
+    <title>Work</title>
 </head>
 <body>
+<script>
+    var work = {{work|json|safe}};
+    var userLikes = {{userLikes|json|safe}};
+    var more = {{more|json|safe}};
+    var similar = {{similar|json|safe}};
+    var products = {{products|json|safe}};
+
+    console.log(work);
+    console.log(userLikes);
+    console.log(more);
+    console.log(similar);
+    console.log(products);
+</script>
 </body>
 </html>
