--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -1,22 +1,32 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title>Work</title>
-</head>
-<body>
-<script>
-    var work = {{work|json|safe}};
-    var userLikes = {{userLikes|json|safe}};
-    var more = {{more|json|safe}};
-    var similar = {{similar|json|safe}};
-    var products = {{products|json|safe}};
+{% extends '../../partials/base.html' %}
 
-    console.log(work);
-    console.log(userLikes);
-    console.log(more);
-    console.log(similar);
-    console.log(products);
-</script>
-</body>
-</html>
+{% set path = 'product' %}
+{% set title = 'Arte Manifiesto | Product' %}
+{% set css = 'single-product' %}
+
+{% block elements %}
+
+{% include '../../partials/single-work.html' %}
+
+{% endblock %}
+
+{% block scripts %}
+    <script type="text/javascript">
+
+        var work = {{ work|json|safe }};
+        console.log('work: ', work)
+
+        var userLikes = {{userLikes|json|safe}};
+        console.log('userLikes: ', userLikes);
+
+        var more = {{more|json|safe}};
+        console.log('more: ', more);
+
+        var similar = {{similar|json|safe}};
+        console.log('similar: ', similar);
+
+        var products = {{ products|json|safe }}
+        console.log('products: ', products);
+
+    </script>
+{% endblock %}
