antes de pulear

--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -1,11 +1,13 @@
 
 {% extends '../partials/base.html' %}
-	
+
 	{% set path = 'login' %}
 	{% set title = 'Arte Manifiesto | Login' %}
 	{% set css = 'login' %}
 
 {% block elements %}
+
+		{% include '../partials/flash-message.html' %}
 
 		{% include '../partials/auth.html' %}
 
