antes de pulear rico

--- a/public/src/stylus/objects/flash-message.styl
+++ b/public/src/stylus/objects/flash-message.styl
@@ -2,7 +2,12 @@
 	max-width max-width
 	margin auto
 	display none
-	
+	position absolute
+	left 50%
+	transform translate(-50%, 0%)
+	width 100%
+
+
 .flash-message
 	text-align center
 	position relative
