--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -368,6 +368,14 @@ input[type="submit"] {
   max-width: 1100px;
   margin: auto;
   display: none;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  -o-transform: translate(-50%, 0%);
+  -ms-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
+  width: 100%;
 }
 .flash-message {
   text-align: center;
@@ -849,6 +857,14 @@ body {
   max-width: 1100px;
   margin: auto;
   display: none;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  -o-transform: translate(-50%, 0%);
+  -ms-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
+  width: 100%;
 }
 .flash-message {
   text-align: center;
