--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -368,6 +368,14 @@ input[type="submit"] {
   max-width: 1100px;
   margin: auto;
   display: none;
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0%);
+  -moz-transform: translate(-50%, 0%);
+  -o-transform: translate(-50%, 0%);
+  -ms-transform: translate(-50%, 0%);
+  transform: translate(-50%, 0%);
+  width: 100%;
 }
 .flash-message {
   text-align: center;
@@ -846,7 +854,7 @@ body {
   border-radius: 50%;
 }
 .auth-container {
-  margin: auto;
+  margin: 4rem auto;
   max-width: 400px;
 }
 .auth {
