--- a/public/src/stylus/objects/auth.styl
+++ b/public/src/stylus/objects/auth.styl
@@ -2,7 +2,7 @@
 	$ AUTH
 *------------------------------------*/
 .auth-container
-	margin auto
+	margin 4rem auto
 	max-width 400px
 
 .auth
@@ -62,7 +62,7 @@
 		transform rotate(-180deg)
 	100%
 		transform rotate(-360deg)
-		
+
 
 /*------------------------------------*
 	$ BACKGROUND IMAGE
