open single work in desktop

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -24,11 +24,11 @@
  -->
 {% endblock %}
 {% block scripts %}
-
-// <script>
-//     var user = {{user | json | safe}};
-// </script>
-
+<!--
+<script>
+    var user = {{user | json | safe}};
+</script>
+ -->
 <!-- <script src="/js/vendor/jquery.min.js"></script>
 <script src="/js/vendor/hammer.min.js"></script>
 <script src="/js/vendor/underscore-min.js"></script>
